--- a/src/pages/content/content.html
+++ b/src/pages/content/content.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-navbar>
+     <button ion-button menuToggle>
+      <ion-icon ios="ios-menu" md="md-menu"></ion-icon>
+    </button>
     <ion-title>
       Content
     </ion-title>
@@ -8,7 +11,6 @@
 
 <ion-content padding>
   <p>
-    This is a perfect starting point for a page with primarily text content. The
-    body is padded nicely and ready for prose.
+    Ionic Template
   </p>
 </ion-content>
